# cfpb-connectors

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: cfpb_complaint_all_parameters.py  cfpb_complaint_no_company.py  cfpb_complaint_no_end_date.py  cfpb_complaint_no_parameters.py  cfpb_complaint_no_start_date.py  cfpb_complaint_reader_basic_usage.py
src/cfpb/complaints/: __init__.py  reader.py  utils.py
src/tests/: CFPBComplaintReader_test.py
