[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfpb-connectors"
version = "0.1.0"
description = "LlamaIndex readers for loading CFPB data as Document objects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alejandro Morales" }]
license = { text = "MIT" }

dependencies = [
    "llama-index-core>=0.14.21",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]

openai = [
    "llama-index-llms-openai>=0.7.0",
    "llama-index-embeddings-openai>=0.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]